tests/error/poly_errors/arg_mismatch5.py
from guppylang.decorator import guppy


@guppy
def main(x: list[42]) -> None:
    pass


main.compile(entrypoint=False)
